--- a/index.html
+++ b/index.html
@@ -23,5 +23,103 @@
     </div>
 
 
+    <div class="container">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>CODIGO</th>
+                <th>ASIGNATURA</th>
+                <th>GRUPO</th>
+                <th>DIA</th>
+                <th>HORARIO</th>
+                <th>AULA</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>0413</td>
+                <td>PROGRAMACION WEB</td>
+                <td>Gpo1</td>
+                <td>MARTES</td>
+                <td>10:00 - 11:40</td>
+                <td>E201</td>
+            </tr>
+            <tr>
+                <td>0413</td>
+                <td>PROGRAMACION WEB</td>
+                <td>Gpo1</td>
+                <td>jueves</td>
+                <td>15:00 - 16:40</td>
+                <td>E201</td>
+            </tr>
+            <tr>
+                <td>0402</td>
+                <td>INTRO. INGENIERIA</td>
+                <td>Gpo3</td>
+                <td>LUNES</td>
+                <td>08:00 - 09:40</td>
+                <td>D104</td>
+            </tr>
+            <tr>
+                <td>0402</td>
+                <td>INTRO. INGENIERIA</td>
+                <td>Gpo3</td>
+                <td>MIERCOLES</td>
+                <td>08:00 - 09:40</td>
+                <td>D104</td>
+            </tr>
+            <tr>
+                <td>0402</td>
+                <td>INTRO. INGENIERIA</td>
+                <td>Gpo4</td>
+                <td>LUNES</td>
+                <td>10:00 - 11:40</td>
+                <td>E201</td>
+            </tr>
+            <tr>
+                <td>0402</td>
+                <td>INTRO. INGENIERIA</td>
+                <td>Gpo4</td>
+                <td>JUEVES</td>
+                <td>08:00 - 09:40</td>
+                <td>E201</td>
+            </tr>
+            <tr>
+                <td>0402</td>
+                <td>INTRO. INGENIERIA</td>
+                <td>Gpo7</td>
+                <td>LUNES</td>
+                <td>03:00 - 04:40</td>
+                <td>D104</td>
+            </tr>
+            <tr>
+                <td>0402</td>
+                <td>INTRO. INGENIERIA</td>
+                <td>Gpo7</td>
+                <td>JUEVES</td>
+                <td>01:00 - 02:40</td>
+                <td>E201</td>
+            </tr>
+            <tr>
+                <td>0402</td>
+                <td>INTRO. INGENIERIA</td>
+                <td>Gpo8</td>
+                <td>MARTES</td>
+                <td>03:00 - 04:40</td>
+                <td>D104</td>
+            </tr>
+            <tr>
+                <td>0402</td>
+                <td>INTRO. INGENIERIA</td>
+                <td>Gpo8</td>
+                <td>MIERCOLES</td>
+                <td>01:00 - 02:40</td>
+                <td>D104</td>
+            </tr>
+        </tbody>
+    </table>
+    </div>
+
+
 </body>
 </html>
