--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
-    <div class="bg-dark text-white shadow py-3">
+    <nav class="navbar navbar-dark bg-dark shadow py-3">
         <div class="container">
-            <div class="row align-items-center">
-                <div class="col-sm-4">SIU-WEB</div>
-                <div class="col-sm-4 text-center">SISTEMA ACADEMICO DOCENTE</div>
-                <div class="col-sm-4 text-end">
+            <div class="row w-100 align-items-center">
+                <div class="col-sm-4 text-center text-white"> SIU-WEB </div>
+                <div class="col-sm-4 text-center text-white fw-bold"> SISTEMA ACADEMICO DOCENTE </div>
+                <div class="col-sm-4 text-end text-white">
                     Usuario: A. Cisneros<br>
                     Período: 2026-I
                 </div>
             </div>
         </div>
-    </div>
-
+    </nav>
 
     <div class="container">
     <table class="table">
