add table borders

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </div>
     </nav>
 
-    <div class="container">
-    <table class="table">
+    <div class="container my-4">
+    <table class="table table-bordered table-striped">
         <thead>
             <tr>
                 <th>CODIGO</th>
@@ -119,6 +119,6 @@
     </table>
     </div>
 
-
+    
 </body>
 </html>
