--- a/index.html
+++ b/index.html
@@ -119,6 +119,15 @@
     </table>
     </div>
 
-    
+    <hr class="w-50 mx-auto mt-5">
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-auto text-center">
+                Sistema de Gestión Académica - Derechos Reservados 1999-2005
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
