--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
     </nav>
 
     <div class="container my-4">
+        <div class="col-auto text-center fw-bold text-danger fs-4">
+            REPORTE OFICIAL DE HORARIOS
+        </div>
+    </div>
+
+
+    <div class="container my-4">
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
@@ -122,10 +129,8 @@
     <hr class="w-50 mx-auto mt-5">
 
     <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-auto text-center">
-                Sistema de Gestión Académica - Derechos Reservados 1999-2005
-            </div>
+        <div class="col-auto text-center">
+            Sistema de Gestión Académica - Derechos Reservados 1999-2005
         </div>
     </div>
 
