bold web subject

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <tbody>
             <tr>
                 <td>0413</td>
-                <td>PROGRAMACION WEB</td>
+                <td class="fw-bold">PROGRAMACION WEB</td>
                 <td>Gpo1</td>
                 <td>MARTES</td>
                 <td>10:00 - 11:40</td>
@@ -52,7 +52,7 @@
             </tr>
             <tr>
                 <td>0413</td>
-                <td>PROGRAMACION WEB</td>
+                <td class="fw-bold">PROGRAMACION WEB</td>
                 <td>Gpo1</td>
                 <td>jueves</td>
                 <td>15:00 - 16:40</td>
