--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
         </div>
     </div>
 
+    <div class="container align-items-end d-flex justify-content-end mb-3">
+        <button type="button" class="btn btn-primary">IMPRIMIR REPORTE</button>
+        <button type="button" class="btn btn-success">EXPORTAR A EXCEL</button>
+        <button type="button" class="btn btn-secondary">CERRAR SESION</button>
+    </div>
+
+
+
 
     <div class="container my-4">
     <table class="table table-bordered table-striped">
