--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
     <div class="container my-4">
-    <table class="table table-bordered table-striped">
+    <table class="table table-bordered table-striped table-responsive">
         <thead>
             <tr>
                 <th>CODIGO</th>
