--- a/index.html
+++ b/index.html
@@ -53,82 +53,122 @@
             <tr>
                 <td>0413</td>
                 <td class="fw-bold">PROGRAMACION WEB</td>
-                <td>Gpo1</td>
+                <td>
+                    <span class="badge bg-secondary">Gpo1</span>
+                </td>
                 <td>MARTES</td>
                 <td>10:00 - 11:40</td>
-                <td>E201</td>
+                <td>
+                    <span class="badge bg-info text-dark">E201</span>
+                </td>
             </tr>
             <tr>
                 <td>0413</td>
                 <td class="fw-bold">PROGRAMACION WEB</td>
-                <td>Gpo1</td>
+                <td>
+                    <span class="badge bg-secondary">Gpo1</span>
+                </td>
                 <td>jueves</td>
                 <td>15:00 - 16:40</td>
-                <td>E201</td>
+                <td>
+                    <span class="badge bg-info text-dark">E201</span>
+                </td>
             </tr>
             <tr>
                 <td>0402</td>
                 <td>INTRO. INGENIERIA</td>
-                <td>Gpo3</td>
+                <td>
+                    <span class="badge bg-secondary">Gpo3</span>
+                </td>
                 <td>LUNES</td>
                 <td>08:00 - 09:40</td>
-                <td>D104</td>
+                <td>
+                    <span class="badge bg-info text-dark">D104</span>
+                </td>
             </tr>
             <tr>
                 <td>0402</td>
                 <td>INTRO. INGENIERIA</td>
-                <td>Gpo3</td>
+                <td>
+                    <span class="badge bg-secondary">Gpo3</span>
+                </td>
                 <td>MIERCOLES</td>
                 <td>08:00 - 09:40</td>
-                <td>D104</td>
+                <td>
+                    <span class="badge bg-info text-dark">D104</span>
+                </td>
             </tr>
             <tr>
                 <td>0402</td>
                 <td>INTRO. INGENIERIA</td>
-                <td>Gpo4</td>
+                <td>
+                    <span class="badge bg-secondary">Gpo4</span>
+                </td>
                 <td>LUNES</td>
                 <td>10:00 - 11:40</td>
-                <td>E201</td>
+                <td>
+                    <span class="badge bg-info text-dark">E201</span>
+                </td>
             </tr>
             <tr>
                 <td>0402</td>
                 <td>INTRO. INGENIERIA</td>
-                <td>Gpo4</td>
+                <td>
+                    <span class="badge bg-secondary">Gpo4</span>
+                </td>
                 <td>JUEVES</td>
                 <td>08:00 - 09:40</td>
-                <td>E201</td>
+                <td>
+                    <span class="badge bg-info text-dark">E201</span>
+                </td>
             </tr>
             <tr>
                 <td>0402</td>
                 <td>INTRO. INGENIERIA</td>
-                <td>Gpo7</td>
+                <td>
+                    <span class="badge bg-secondary">Gpo7</span>
+                </td>
                 <td>LUNES</td>
                 <td>03:00 - 04:40</td>
-                <td>D104</td>
+                <td>
+                    <span class="badge bg-info text-dark">D104</span>
+                </td>
             </tr>
             <tr>
                 <td>0402</td>
                 <td>INTRO. INGENIERIA</td>
-                <td>Gpo7</td>
+                <td>
+                    <span class="badge bg-secondary">Gpo7</span>
+                </td>
                 <td>JUEVES</td>
                 <td>01:00 - 02:40</td>
-                <td>E201</td>
+                <td>
+                    <span class="badge bg-info text-dark">D104</span>
+                </td>
             </tr>
             <tr>
                 <td>0402</td>
                 <td>INTRO. INGENIERIA</td>
-                <td>Gpo8</td>
+                <td>
+                    <span class="badge bg-secondary">Gpo8</span>
+                </td>
                 <td>MARTES</td>
                 <td>03:00 - 04:40</td>
-                <td>D104</td>
+                <td>
+                    <span class="badge bg-info text-dark">D104</span>
+                </td>
             </tr>
             <tr>
                 <td>0402</td>
                 <td>INTRO. INGENIERIA</td>
-                <td>Gpo8</td>
+                <td>
+                    <span class="badge bg-secondary">Gpo8</span>
+                </td>
                 <td>MIERCOLES</td>
                 <td>01:00 - 02:40</td>
-                <td>D104</td>
+                <td>
+                    <span class="badge bg-info text-dark">D104</span>
+                </td>
             </tr>
         </tbody>
     </table>
