--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </div>
 
     <div class="container align-items-end d-flex justify-content-end mb-3">
-        <button type="button" class="btn btn-primary btn-sm">IMPRIMIR REPORTE</button>
-        <button type="button" class="btn btn-success btn-sm">EXPORTAR A EXCEL</button>
-        <button type="button" class="btn btn-secondary btn-sm">CERRAR SESION</button>
+        <button type="button" class="btn btn-primary btn-sm mx-1">IMPRIMIR REPORTE</button>
+        <button type="button" class="btn btn-success btn-sm mx-1">EXPORTAR A EXCEL</button>
+        <button type="button" class="btn btn-secondary btn-sm mx-1">CERRAR SESION</button>
     </div>
 
 
