--- a/calendar.html
+++ b/calendar.html
@@ -58,7 +58,12 @@
             <tbody>
 
                 <tr>
-                    <th scope="row">8:00</th>
+                    <th scope="row">
+                        <div class="container d-flex flex-column align-items-center justify-content-center">
+                            <span>8:00</span>
+                            <span>9:40</span>
+                        </div>
+                    </th>
                     <td class="text-center bg-primary">INTRO. INGENIERIA</td>
                     <td class="text-center"></td>
                     <td class="text-center bg-primary">INTRO. INGENIERIA</td>
@@ -68,44 +73,37 @@
                 </tr>
 
                 <tr>
-                    <th scope="row">9:40</th>
+                    <th scope="row container d-flex flex-column align-items-center justify-content-center">
+                        <span>10:00</span>
+                        <span>11:40</span>
+                    </th>
+                    <td class="text-center"></td>
+                    <td class="text-center text-center bg-primary">PROGRAMACION WEB</td>
+                    <td class="text-center"></td>
+                    <td class="text-center text-center bg-primary">PROGRAMACION WEB</td>
+                    <td class="text-center"></td>
+                    <td class="text-center"></td>
                 </tr>
 
                 <tr>
-                    <th scope="row">10:00</th>
+                    <th scope="row container d-flex flex-column align-items-center justify-content-center">
+                        <span>1:00</span>
+                        <span>2:40</span>
+                    </th>
                 </tr>
 
                 <tr>
-                    <th scope="row">11:40</th>
+                    <th scope="row container d-flex flex-column align-items-center justify-content-center">
+                        <span>3:00</span>
+                        <span>4:40</span>
+                    </th>
                 </tr>
-
-                <tr>
-                    <th scope="row">1:00</th>
-                </tr>
-
-                <tr>
-                    <th scope="row">2:40</th>
-                </tr>
-
-                <tr>
-                    <th scope="row">3:00</th>
-                </tr>
-
-                <tr>
-                    <th scope="row">4:40</th>
-                </tr>
-
 
             </tbody>
 
-
         </table>
-
 
     </div>
     
-  
-
-
 </body>
 </html>
