add all class periods

--- a/calendar.html
+++ b/calendar.html
@@ -77,10 +77,10 @@
                         <span>10:00</span>
                         <span>11:40</span>
                     </th>
-                    <td class="text-center"></td>
+                    <td class="text-center text-center bg-primary">INTRO. INGENIERIA</td>
                     <td class="text-center text-center bg-primary">PROGRAMACION WEB</td>
                     <td class="text-center"></td>
-                    <td class="text-center text-center bg-primary">PROGRAMACION WEB</td>
+                    <td class="text-center"></td>
                     <td class="text-center"></td>
                     <td class="text-center"></td>
                 </tr>
@@ -90,6 +90,12 @@
                         <span>1:00</span>
                         <span>2:40</span>
                     </th>
+                    <td class="text-center"></td>
+                    <td class="text-center"></td>
+                    <td class="text-center text-center bg-primary">INTRO. INGENIERIA</td>
+                    <td class="text-center text-center bg-primary">INTRO. INGENIERIA</td>
+                    <td class="text-center"></td>
+                    <td class="text-center"></td>
                 </tr>
 
                 <tr>
@@ -97,6 +103,12 @@
                         <span>3:00</span>
                         <span>4:40</span>
                     </th>
+                    <td class="text-center text-center bg-primary">INTRO. INGENIERIA</td>
+                    <td class="text-center text-center bg-primary">INTRO. INGENIERIA</td>
+                    <td class="text-center"></td>
+                    <td class="text-center"></td>
+                    <td class="text-center"></td>
+                    <td class="text-center"></td>
                 </tr>
 
             </tbody>
