--- a/calendar.html
+++ b/calendar.html
@@ -58,11 +58,9 @@
             <tbody>
 
                 <tr>
-                    <th scope="row">
-                        <div class="container d-flex flex-column align-items-center justify-content-center">
-                            <span>8:00</span>
-                            <span>9:40</span>
-                        </div>
+                    <th scope="container d-flex flex-column align-items-center justify-content-center">
+                        <span>8:00</span>
+                        <span>9:40</span>    
                     </th>
                     <td class="text-center bg-primary">INTRO. INGENIERIA</td>
                     <td class="text-center"></td>
