cols with white border

--- a/calendar.html
+++ b/calendar.html
@@ -62,10 +62,22 @@
                         <span>8:00</span>
                         <span>9:40</span>    
                     </th>
-                    <td class="text-center bg-primary">INTRO. INGENIERIA</td>
+                    <td class="text-center">
+                        <div class="bg-primary text-white rounded px-2 py-1 mx-1 my-1">
+                            INTRO. INGENIERIA
+                        </div>
+                    </td>
                     <td class="text-center"></td>
-                    <td class="text-center bg-primary">INTRO. INGENIERIA</td>
-                    <td class="text-center bg-primary">INTRO. INGENIERIA</td>
+                    <td class="text-center">
+                        <div class="bg-primary text-white rounded px-2 py-1 mx-1 my-1">
+                            INTRO. INGENIERIA
+                        </div>
+                    </td>
+                    <td class="text-center">
+                        <div class="bg-primary text-white rounded px-2 py-1 mx-1 my-1">
+                            INTRO. INGENIERIA
+                        </div>
+                    </td>
                     <td class="text-center"></td>
                     <td class="text-center"></td>
                 </tr>
@@ -75,8 +87,16 @@
                         <span>10:00</span>
                         <span>11:40</span>
                     </th>
-                    <td class="text-center text-center bg-primary">INTRO. INGENIERIA</td>
-                    <td class="text-center text-center bg-primary">PROGRAMACION WEB</td>
+                    <td class="text-center">
+                        <div class="bg-primary text-white rounded px-2 py-1 mx-1 my-1">
+                            INTRO. INGENIERIA
+                        </div>
+                    </td>
+                    <td class="text-center">
+                        <div class="bg-primary text-white rounded px-2 py-1 mx-1 my-1">
+                            PROGRAMACION WEB
+                        </div>
+                    </td>
                     <td class="text-center"></td>
                     <td class="text-center"></td>
                     <td class="text-center"></td>
@@ -90,8 +110,16 @@
                     </th>
                     <td class="text-center"></td>
                     <td class="text-center"></td>
-                    <td class="text-center text-center bg-primary">INTRO. INGENIERIA</td>
-                    <td class="text-center text-center bg-primary">INTRO. INGENIERIA</td>
+                    <td class="text-center">
+                        <div class="bg-primary text-white rounded px-2 py-1 mx-1 my-1">
+                            INTRO. INGENIERIA
+                        </div>
+                    </td>
+                    <td class="text-center">
+                        <div class="bg-primary text-white rounded px-2 py-1 mx-1 my-1">
+                            INTRO. INGENIERIA
+                        </div>
+                    </td>
                     <td class="text-center"></td>
                     <td class="text-center"></td>
                 </tr>
@@ -101,8 +129,16 @@
                         <span>3:00</span>
                         <span>4:40</span>
                     </th>
-                    <td class="text-center text-center bg-primary">INTRO. INGENIERIA</td>
-                    <td class="text-center text-center bg-primary">INTRO. INGENIERIA</td>
+                    <td class="text-center">
+                        <div class="bg-primary text-white rounded px-2 py-1 mx-1 my-1">
+                            INTRO. INGENIERIA
+                        </div>
+                    </td>
+                    <td class="text-center">
+                        <div class="bg-primary text-white rounded px-2 py-1 mx-1 my-1">
+                            INTRO. INGENIERIA
+                        </div>
+                    </td>
                     <td class="text-center"></td>
                     <td class="text-center"></td>
                     <td class="text-center"></td>
