improve responsive design

--- a/calendar.html
+++ b/calendar.html
@@ -9,8 +9,9 @@
 <body>
 
 
-    <section class="flex w-75 align-items-center justify-content-center mx-auto my-5">
-        <table class="table">
+        <div class="container my-4">
+            <div class="table-responsive">
+                <table class="table table-sm">
 
             <thead>
                 <tr>
@@ -147,9 +148,9 @@
 
             </tbody>
 
-        </table>
-
-    </div>
+                </table>
+            </div>
+        </div>
     
 </body>
 </html>
